hmw final download & edit button spacing fix

--- a/src/components/download/index.module.scss
+++ b/src/components/download/index.module.scss
@@ -1,3 +1,10 @@
+.downloadContainer {
+  width: fit-content;
+  height: 100%;
+  display: inline-block;
+  margin: 0 0.5rem;
+}
+
 .download {
   display: inline;
 
