--- a/src/components/edit-button/index.module.scss
+++ b/src/components/edit-button/index.module.scss
@@ -2,6 +2,7 @@
   width: fit-content;
   height: 100%;
   display: inline-block;
+  margin: 0 0.5rem;
 }
 
 .editButton {
